<resources>
    <string name="app_name">BookStore</string>

    <string name="AddBookActivity_title">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_supplier_name">Supplier Name</string>
    <string name="hint_book_category">Book Category</string>
    <string name="hint_book_supplier_phone_number">Phone</string>

    <string name="category_overview">Overview</string>

    <string name="book_category_unknown">Unknown</string>
    <string name="book_category_fiction">Fiction</string>
    <string name="book_category_history">History</string>
    <string name="book_category_technology">Technology</string>
    <string name="table_header">ID-Name-Price-QTY-Category-SupName-SupPhone</string>
</resources>
