<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin"
        tools:context=".AddBookActivity">

        <TextView
            android:id="@+id/name_text_view"
            style="@style/FieldNameStyle"
            android:text="Name" />

        <EditText
            android:id="@+id/edit_book_name"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords"
            app:layout_constraintLeft_toRightOf="@+id/name_text_view"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/category_text_view"
            style="@style/FieldNameStyle"
            android:text="Category"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

        <Spinner
            android:id="@+id/spinner_book_category"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_category"
            android:inputType="textCapWords"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toRightOf="@+id/category_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_book_name" />

        <TextView
            android:id="@+id/price_text_view"
            style="@style/FieldNameStyle"
            android:text="Price"
            app:layout_constraintTop_toBottomOf="@+id/category_text_view" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_price"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/price_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_book_category" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/FieldNameStyle"
            android:text="Quantity"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/quantity_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

        <TextView
            android:id="@+id/supplier_name_text_view"
            style="@style/FieldNameStyle"
            android:text="Supplier Name"
            app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

        <EditText
            android:id="@+id/edit_book_supplier_name"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_supplier_name"
            app:layout_constraintLeft_toRightOf="@+id/supplier_name_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

        <TextView
            android:id="@+id/supplier_phone_number_text_view"
            style="@style/FieldNameStyle"
            android:text="Supplier Phone"
            app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view" />

        <EditText
            android:id="@+id/edit_book_supplier_phone_number"
            style="@style/FieldValueStyle"
            android:hint="@string/hint_book_supplier_phone_number"
            android:inputType="number"
            app:layout_constraintLeft_toRightOf="@+id/supplier_phone_number_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>